Remove fixed height of person card on mobile
Fixes #97

--- a/wcivf/assets/scss/_cards.scss
+++ b/wcivf/assets/scss/_cards.scss
@@ -51,7 +51,7 @@
 
   @include media(mobile) {
     padding: 10px;
-    height: 13rem;
+    height: auto;
   }
 
   &.candidate_card_list_candidate {
